Second commit - Implemented object based programming and controllers

--- a/app/Loans/HomeView.html
+++ b/app/Loans/HomeView.html
@@ -1,6 +1,7 @@
 <!doctype html>
-{extends file="../templates/main.html"}
+{extends file=$conf->root_path|cat:"/templates/main.html"}
 {block name=content}
+
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="pl" lang="pl">
 <head>
 	<meta charset="utf-8" />
